# aws-security-auditor

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: authentication.md  checks.md  configuration.md  releasing.md  usage.md
examples/: aws-security-auditor.toml  report.json  report.md
src/aws_hygiene_auditor/reporting/: console.py  markdown.py
src/aws_security_auditor/: __init__.py  auth.py  cli.py  config.py  models.py  readonly_client.py  regions.py  scanner.py  suppressions.py
src/aws_security_auditor/checks/: access_analyzer.py  account.py  base.py  ec2.py  ecs.py  iam.py  lambda_functions.py  network.py  rds.py  s3.py  secretsmanager.py  tags.py  vpc.py
src/aws_security_auditor/notifiers/: slack.py
src/aws_security_auditor/reporting/: console.py  csv_report.py  json_report.py  markdown.py  regions.py
tests/: test_access_analyzer_checks.py  test_account_checks.py  test_cli.py  test_config.py  test_ec2_checks.py  test_ecs_checks.py  test_iam_checks.py  test_lambda_checks.py  test_network_checks.py  test_pagination.py  test_rds_checks.py  test_readonly_client.py  test_regions.py  test_reporting.py  test_s3_checks.py  test_scanner.py  test_secretsmanager_checks.py  test_slack_notifier.py  test_suppressions.py  test_tags.py  test_vpc_checks.py
