[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-security-auditor"
version = "0.2.0"
description ="Read-only AWS security scanner for common security, cost, and governance issues."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34",
  "botocore>=1.34",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.0",
  "pytest-mock>=3.14",
  "ruff>=0.5",
]

[project.scripts]
aws-security-auditor = "aws_security_auditor.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
